fix submit button on mobile

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -332,6 +332,7 @@ section#register {
     background-color: $gold;
     color: $deeppurple;
     padding: 10px 2%;
+    min-width: 80px;
     width: 15%;
     margin-left: 5px;
     cursor: pointer;
